test all startup

--- a/tvcust/src/main/res/layout/activity_findpsw.xml
+++ b/tvcust/src/main/res/layout/activity_findpsw.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="20dp"
-            android:src="@drawable/icon_back"/>
+            android:src="@drawable/icon_back" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,9 +42,9 @@
                     android:layout_marginRight="20dp"
                     android:drawableLeft="@drawable/icon_login_phone"
                     android:drawablePadding="20dp"
-                    android:maxLength="11"
                     android:hint="手机号"
-                    android:inputType="textPersonName"/>
+                    android:inputType="textPersonName"
+                    android:maxLength="11" />
 
                 <View
                     android:layout_width="match_parent"
@@ -59,37 +59,37 @@
                     android:orientation="horizontal">
 
                     <EditText
-                        style="@style/edit_hidden_login"
                         android:id="@+id/edit_modifypsw_vali"
-                        android:layout_weight="1"
+                        style="@style/edit_hidden_login"
                         android:layout_width="0dp"
                         android:layout_height="60dp"
                         android:layout_marginLeft="20dp"
+                        android:layout_weight="1"
                         android:drawableLeft="@drawable/icon_login_vali"
                         android:drawablePadding="20dp"
-                        android:maxLength="6"
                         android:hint="验证码"
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:maxLength="6" />
 
                     <TextView
                         android:id="@+id/text_modifypsw_getvali"
                         style="@style/text_nomal_small_blue"
                         android:layout_width="102dp"
                         android:layout_height="43dp"
-                        android:layout_marginRight="20dp"
                         android:layout_gravity="center"
-                        android:gravity="center"
+                        android:layout_marginRight="20dp"
                         android:background="@drawable/shape_rect_corner_blue_full_line"
-                        android:text="获取验证码"/>
+                        android:gravity="center"
+                        android:text="获取验证码" />
 
                 </LinearLayout>
 
                 <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/line" />
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/line" />
 
                 <com.sobey.common.view.EmojiEditText
                     android:id="@+id/edit_modifypsw_password_new"
@@ -101,8 +101,28 @@
                     android:drawableLeft="@drawable/icon_login_password"
                     android:drawablePadding="20dp"
                     android:hint="新密码"
-                    android:maxLength="16"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:maxLength="16" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/line" />
+
+                <com.sobey.common.view.EmojiEditText
+                    android:id="@+id/edit_modifypsw_password_new_repeat"
+                    style="@style/edit_hidden_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:drawableLeft="@drawable/icon_login_password"
+                    android:drawablePadding="20dp"
+                    android:hint="确认新密码"
+                    android:inputType="textPassword"
+                    android:maxLength="16" />
 
             </LinearLayout>
 
@@ -123,16 +143,16 @@
                 app:cpb_textIdle="完成修改" />
 
             <!--<TextView-->
-                <!--android:id="@+id/btn_go"-->
-                <!--android:layout_width="246dp"-->
-                <!--android:layout_height="50dp"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:layout_marginTop="36dp"-->
-                <!--android:background="@drawable/shape_rect_corner_blue_full"-->
-                <!--android:gravity="center"-->
-                <!--android:text="完成修改"-->
-                <!--android:textColor="@color/sb_blue_hint"-->
-                <!--android:textSize="16dp" />-->
+            <!--android:id="@+id/btn_go"-->
+            <!--android:layout_width="246dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:layout_marginTop="36dp"-->
+            <!--android:background="@drawable/shape_rect_corner_blue_full"-->
+            <!--android:gravity="center"-->
+            <!--android:text="完成修改"-->
+            <!--android:textColor="@color/sb_blue_hint"-->
+            <!--android:textSize="16dp" />-->
 
         </LinearLayout>
 
