--- a/common/src/main/res/layout/item_recycle_bundle.xml
+++ b/common/src/main/res/layout/item_recycle_bundle.xml
@@ -21,7 +21,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/test" />
+                android:src="@drawable/default_bk" />
 
             <ImageView
                 android:id="@+id/img_bundle_delete"
