--- a/tvcust/src/main/res/drawable/idle_state_selector.xml
+++ b/tvcust/src/main/res/drawable/idle_state_selector.xml
@@ -5,7 +5,7 @@
     <item android:state_focused="true"
           android:color="@color/sb_bk_dark"/>
     <item android:state_enabled="false"
-          android:color="@color/cpb_grey"/>
+          android:color="@color/enable"/>
     <item android:state_enabled="true"
           android:color="@color/sb_bk_dark"/>
 </selector>
