--- a/tvcust/src/main/res/layout/activity_orderallocate.xml
+++ b/tvcust/src/main/res/layout/activity_orderallocate.xml
@@ -1,188 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/sb_bk"
     android:fitsSystemWindows="true"
-    tools:context="com.sobey.tvcust.ui.activity.OrderAllocateActivity">
+    tools:context="com.sobey.tvcust.ui.activity.OrderDetailActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="match_parent"
+        android:background="@color/sb_bk">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-            app:navigationIcon="@drawable/icon_back"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-        <RelativeLayout
+        <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-            <ImageView
-                android:id="@+id/img_orderallocate_header"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:scaleType="center"
-                android:src="@drawable/test" />
 
-            <TextView
-                android:id="@+id/text_orderallocate_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/img_orderallocate_header"
-                android:layout_marginLeft="10dp"
-                android:layout_toEndOf="@+id/img_orderallocate_header"
-                android:layout_toRightOf="@+id/img_orderallocate_header"
-                android:text="四川电视台"
-                android:textColor="@color/sb_text_blank"
-                android:textSize="@dimen/text_nomal" />
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
+                    app:navigationIcon="@drawable/icon_back"
+                    app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <TextView
-                android:id="@+id/text_orderallocate_problem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/text_orderallocate_name"
-                android:layout_alignStart="@+id/text_orderallocate_name"
-                android:layout_below="@+id/text_orderallocate_name"
-                android:layout_marginTop="2dp"
-                android:text="硬件问题：CPU过载警报"
-                android:textColor="@color/sb_text_dark_blank"
-                android:textSize="@dimen/text_nomal_small" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    android:background="@color/white"
+                    android:paddingBottom="15dp"
+                    android:paddingTop="15dp">
 
-            <TextView
-                android:id="@+id/text_orderallocate_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/text_orderallocate_problem"
-                android:layout_alignStart="@+id/text_orderallocate_problem"
-                android:layout_below="@+id/text_orderallocate_problem"
-                android:layout_marginTop="2dp"
-                android:text="订单号：56811658952"
-                android:textColor="@color/sb_text_dark_blank"
-                android:textSize="@dimen/text_nomal_small" />
-        </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/img_orderallocate_header"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="20dp"
+                        android:scaleType="center"
+                        android:src="@drawable/test" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:background="@color/white"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">
+                    <TextView
+                        android:id="@+id/text_orderallocate_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/img_orderallocate_header"
+                        android:layout_marginLeft="10dp"
+                        android:layout_toEndOf="@+id/img_orderallocate_header"
+                        android:layout_toRightOf="@+id/img_orderallocate_header"
+                        android:text="四川电视台"
+                        android:textColor="@color/sb_text_blank"
+                        android:textSize="@dimen/text_nomal" />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@drawable/line" />
-        </FrameLayout>
+                    <TextView
+                        android:id="@+id/text_orderallocate_problem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/text_orderallocate_name"
+                        android:layout_alignStart="@+id/text_orderallocate_name"
+                        android:layout_below="@+id/text_orderallocate_name"
+                        android:layout_marginTop="2dp"
+                        android:text="硬件问题：CPU过载警报"
+                        android:textColor="@color/sb_text_dark_blank"
+                        android:textSize="@dimen/text_nomal_small" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:orientation="vertical"
-            app:layout_scrollFlags="scroll|enterAlways">
+                    <TextView
+                        android:id="@+id/text_orderallocate_num"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/text_orderallocate_problem"
+                        android:layout_alignStart="@+id/text_orderallocate_problem"
+                        android:layout_below="@+id/text_orderallocate_problem"
+                        android:layout_marginTop="2dp"
+                        android:text="订单号：56811658952"
+                        android:textColor="@color/sb_text_dark_blank"
+                        android:textSize="@dimen/text_nomal_small" />
+                </RelativeLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:orientation="vertical"
-                android:paddingBottom="25dp">
+                app:layout_scrollFlags="scroll|enterAlways">
 
-                <TextView
-                    android:id="@+id/text_orderallocate_user_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="申请人：王先生"
-                    android:textColor="@color/sb_text_blank"
-                    android:textSize="@dimen/text_nomal" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@drawable/line" />
 
-                <TextView
-                    android:id="@+id/text_orderallocate_user_phone"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:text="电话：15632458965"
-                    android:textColor="@color/sb_text_dark_blank"
-                    android:textSize="@dimen/text_nomal_small" />
+                    android:orientation="vertical"
+                    android:paddingBottom="25dp"
+                    android:paddingTop="20dp">
+
+                    <TextView
+                        android:id="@+id/text_orderallocate_user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="申请人：王先生"
+                        android:textColor="@color/sb_text_blank"
+                        android:textSize="@dimen/text_nomal" />
+
+                    <TextView
+                        android:id="@+id/text_orderallocate_user_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="5dp"
+                        android:text="电话：15632458965"
+                        android:textColor="@color/sb_text_dark_blank"
+                        android:textSize="@dimen/text_nomal_small" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
+        </android.support.design.widget.AppBarLayout>
+
+        <LinearLayout
+            android:id="@+id/showingroup"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipe"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycle_orderallocate"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp" />
+
+            </android.support.v4.widget.SwipeRefreshLayout>
+
+            <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_marginBottom="10dp"-->
+            <!--android:layout_marginLeft="10dp"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:background="@color/sb_bk_dark"-->
+            <!--android:gravity="center"-->
+            <!--android:text="分配任务"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="@dimen/text_big" />-->
+
+            <com.dd.CircularProgressButton
+                android:id="@+id/btn_go"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="#00000000"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_big"
+                app:cpb_colorIndicator="@color/sb_blue"
+                app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
+                app:cpb_colorProgress="#00000000"
+                app:cpb_iconComplete="@drawable/ic_action_accept"
+                app:cpb_iconError="@drawable/ic_action_cancel"
+                app:cpb_selectorIdle="@drawable/idle_state_selector"
+                app:cpb_textIdle="分配任务" />
+
         </LinearLayout>
 
-    </android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
-    <LinearLayout
-        android:id="@+id/showingroup"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycle_orderallocate"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:paddingBottom="10dp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp" />
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_marginBottom="10dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:background="@color/sb_bk_dark"-->
-        <!--android:gravity="center"-->
-        <!--android:text="分配任务"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:textSize="@dimen/text_big" />-->
-
-        <com.dd.CircularProgressButton
-            android:id="@+id/btn_go"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:background="#00000000"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_big"
-            app:cpb_colorIndicator="@color/sb_blue"
-            app:cpb_colorIndicatorBackground="@color/sb_blue_hint_trans"
-            app:cpb_colorProgress="#00000000"
-            app:cpb_iconComplete="@drawable/ic_action_accept"
-            app:cpb_iconError="@drawable/ic_action_cancel"
-            app:cpb_selectorIdle="@drawable/idle_state_selector"
-            app:cpb_textIdle="分配任务" />
-
-    </LinearLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+</android.support.v4.widget.DrawerLayout>
