--- a/tvcust/src/main/res/values/colors.xml
+++ b/tvcust/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <!---->
     <color name="sb_text_login_title">#626466</color>
     <color name="sb_blue">#5793e6</color>
+    <color name="sb_blue_trans">#dd5793e6</color>
     <color name="sb_blue_hint">#cfe4fb</color>
     <color name="sb_blue_hint_trans">#335793e6</color>
     <color name="sb_bk_dark_trans">#55000000</color>
