--- a/tvcust/src/main/res/layout/activity_warninglist.xml
+++ b/tvcust/src/main/res/layout/activity_warninglist.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/sb_bk"
     android:fitsSystemWindows="true"
-    tools:context="com.sobey.tvcust.ui.activity.DeviceListActivity">
+    tools:context="com.sobey.tvcust.ui.activity.WarningListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -35,8 +35,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:id="@+id/showingroup"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -56,6 +55,6 @@
                 android:paddingBottom="10dp"/>
 
         </com.liaoinstan.springview.widget.SpringView>
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
