--- a/tvcust/src/main/res/layout/fragment_home_qw.xml
+++ b/tvcust/src/main/res/layout/fragment_home_qw.xml
@@ -22,10 +22,10 @@
 
             <ImageView
                 android:id="@+id/btn_go_msg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="right"
-                android:layout_marginRight="20dp"
+                android:scaleType="center"
                 android:src="@drawable/home_qw_msg_hot" />
 
         </android.support.v7.widget.Toolbar>
