--- a/tvcust/src/main/res/layout/activity_devicedetail.xml
+++ b/tvcust/src/main/res/layout/activity_devicedetail.xml
@@ -41,7 +41,12 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <android.support.v7.widget.CardView
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -95,16 +100,8 @@
 
                 </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="190dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@color/white"
-                    app:cardCornerRadius="0dp" />
-
-                <android.support.v7.widget.CardView
+                    <android.support.v7.widget.CardView
+                    android:id="@+id/card_centerprog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -145,7 +142,7 @@
 
                 </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
+                    <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -277,6 +274,7 @@
 
                 </android.support.v7.widget.CardView>
 
+                </LinearLayout>
 
             </LinearLayout>
 
