--- a/tvcust/src/main/res/layout/item_recycle_orderdetail.xml
+++ b/tvcust/src/main/res/layout/item_recycle_orderdetail.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
+    android:foreground="?attr/selectableItemBackground"
     android:layout_marginTop="10dp"
     app:cardCornerRadius="0dp">
 
